apps/weave/weave-scope-app.ingressroute.yaml
---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute

metadata:
  name: weave-scope-app
  labels:
    app: weave-scope
    weave-cloud-component: scope
    weave-scope-component: app

spec:
  entryPoints: ["websecure"]
  routes:
    - match: Host(`infra.itskai.me`)
      kind: Rule
      services:
        - name: weave-scope-app
          port: 80
  tls:
    secretName: itskai-me-tls
